--- a/pdf-llm-trainer/vercel.json
+++ b/pdf-llm-trainer/vercel.json
@@ -1,7 +1,7 @@
 {
-  "buildCommand": "cd pdf-llm-trainer/frontend && npm ci && npm run build",
-  "outputDirectory": "pdf-llm-trainer/frontend/dist",
-  "installCommand": "cd pdf-llm-trainer/frontend && npm ci",
+  "buildCommand": "cd frontend && npm ci && npm run build",
+  "outputDirectory": "frontend/dist",
+  "installCommand": "cd frontend && npm ci",
   "framework": "vite",
   "functions": {
     "api/**/*.py": {
