--- a/pdf-llm-trainer/vercel.json
+++ b/pdf-llm-trainer/vercel.json
@@ -1,7 +1,7 @@
 {
-  "buildCommand": "cd pdf-llm-trainer && npm install && npm run build",
-  "outputDirectory": "pdf-llm-trainer/dist",
-  "installCommand": "cd pdf-llm-trainer && npm install",
+  "buildCommand": "npm ci && npm run build",
+  "outputDirectory": "dist",
+  "installCommand": "npm ci",
   "framework": "vite",
   "rewrites": [
     {
