--- a/pdf-llm-trainer/vercel.json
+++ b/pdf-llm-trainer/vercel.json
@@ -1,8 +1,8 @@
 {
-  "buildCommand": "npm ci && npm run build",
-  "outputDirectory": "dist",
-  "installCommand": "npm ci",
-  "framework": "vite",
+  "buildCommand": "cd frontend && npm ci && npm run build",
+  "outputDirectory": "frontend/dist",
+  "installCommand": "cd frontend && npm ci",
+  "framework": null,
   "rewrites": [
     {
       "source": "/admin",
