--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,5 +12,9 @@
   "devDependencies": {
     "typescript": "~5.9.3",
     "vite": "^7.2.2"
+  },
+  "dependencies": {
+    "marked": "^12.0.0",
+    "dompurify": "^3.0.8"
   }
 }
