--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,7 +14,9 @@
     "vite": "^7.2.2"
   },
   "dependencies": {
+    "dompurify": "^3.0.8",
     "marked": "^12.0.0",
-    "dompurify": "^3.0.8"
+    "pdfjs-dist": "^5.4.394",
+    "react-pdf": "^10.2.0"
   }
 }
