--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,9 +5,8 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "tsc && vite build",
-    "preview": "vite preview",
-    "vercel-build": "npm run build"
+    "build": "vite build",
+    "preview": "vite preview"
   },
   "devDependencies": {
     "typescript": "~5.9.3",
@@ -15,8 +14,6 @@
   },
   "dependencies": {
     "dompurify": "^3.0.8",
-    "marked": "^12.0.0",
-    "pdfjs-dist": "^5.4.394",
-    "react-pdf": "^10.2.0"
+    "marked": "^12.0.0"
   }
 }
