--- a/.gitignore
+++ b/.gitignore
@@ -1,45 +1,42 @@
-venv/
+# Environment variables
 .env
+.env.local
+
+# Python
 __pycache__/
-*.pyc
-*.pyo
-*.pyd
+*.py[cod]
+*$py.class
+*.so
 .Python
-*.pt
-*.bin
-*.safetensors
-*.ckpt
-outputs/
-data/qa/*.jsonl
-*.log
-.DS_Store
-*.swp
-*.swo
-*~
+venv/
+ENV/
+env/
 
 # Logs
-logs
 *.log
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-pnpm-debug.log*
-lerna-debug.log*
 
-node_modules
-dist
-dist-ssr
-*.local
+# IDEs
+.vscode/
+.idea/
+*.swp
+*.swo
 
-# Editor directories and files
-.vscode/*
-!.vscode/extensions.json
-.idea
+# OS
 .DS_Store
-*.suo
-*.ntvs*
-*.njsproj
-*.sln
-*.sw?
+Thumbs.db
 
+# Node modules
+node_modules/
 
+# Build outputs
+dist/
+build/
+frontend/dist/
+frontend/build/
+
+# Data files (optional - comment out if you want to keep these)
+data/chunks/*.jsonl
+pdf/*.pdf
+
+# Vercel
+.vercel
