--- a/vercel.json
+++ b/vercel.json
@@ -6,7 +6,8 @@
   "framework": null,
   "functions": {
     "api/**/*.py": {
-      "runtime": "python3.9"
+      "memory": 3009,
+      "maxDuration": 30
     }
   }
 }
